--- a/style.css
+++ b/style.css
@@ -1,12 +1,33 @@
 body {
-    background-image: linear-gradient(
-        180deg,
-        #6495ED 5%,
-        #00FFFF 20%,
-        #008B8B 60%,
-        #00CEd1 95%,
-    );
+    background-image: linear-gradient (180deg, #6495ED 5%,#00ffff 20%,#008B8B 60%,#00CED1 95%);
     margin: 0;
     min-height: 100vh;
     width: 100%;
+}
+
+align_items: center;
+display:flex; 
+height: 100vh;
+justify_content: center;
+position: relative; 
+}
+
+main>section img {
+    height: 300px;
+    margin: 15 px 0;
+    width: 300px;
+}
+
+main>section button{
+    background-color: #00BFFF;
+    border: none;
+    border-radius: 100px;
+    color: white;
+    font-family: EuclidBold;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: -0.6px;
+    line-height: 20px;
+    text-transform: uppercase;
+    padding: 9px 23px;
 }
