implementar metodo para gerar valor aleatorio

--- a/style.css
+++ b/style.css
@@ -31,3 +31,13 @@ main>section button{
     text-transform: uppercase;
     padding: 9px 23px;
 }
+
+#detalhes-container > li {
+    align-items: baseline;
+    display: flex;
+
+}
+
+#detalhes-container > li p{
+    color:white
+
