--- a/style.css
+++ b/style.css
@@ -32,6 +32,13 @@ main>section button{
     padding: 9px 23px;
 }
 
+
+#detalhes-container {
+    font-weight: bold;
+    list-style-type: none;
+    width: 90%;
+}
+
 #detalhes-container > li {
     align-items: baseline;
     display: flex;
@@ -41,3 +48,4 @@ main>section button{
 #detalhes-container > li p{
     color:white
 
+}
