--- a/style.css
+++ b/style.css
@@ -7,21 +7,25 @@ body {
 main {
 align-items: center;
 display:flex; 
+flex-direction: column;
 height: 100vh;
 justify-content: center;
 position: relative; 
 }
 
-main>section img {
+main > section{
+    display: flex;
+    gap: 10px;
+}
+main > section img {
     height: 300px;
     margin: 15 px 0;
     width: 300px;
 }
 
-main>section button{
+main > section button{
     background-color: #00BFFF;
     border: none;
-    border-radius: 100px;
     color: white;
     font-family: EuclidBold;
     font-size: 18px;
@@ -30,6 +34,7 @@ main>section button{
     line-height: 20px;
     text-transform: uppercase;
     padding: 9px 23px;
+    cursor: pointer;
 }
 
 
@@ -42,10 +47,8 @@ main>section button{
 #detalhes-container > li {
     align-items: baseline;
     display: flex;
-
 }
 
 #detalhes-container > li p{
     color:white
-
 }
